# eval-lab-methodology

./: .gitignore  AGENTS.md  ERRATA.md  LICENSE  Makefile  PLAN.md  README.md  STATUS.md  _quarto.yml  build_backend.py  identity-domain.qmd  index.qmd  pyproject.toml  ruff.toml
.github/workflows/: deploy-pages.yml  render-report.yml
analysis/: __init__.py  build_contract_v2_fixture.py  calibration-freeze.v1.json  method-tranche-results.json  run_calibration_freeze.py  run_contract_v2.py  run_method_tranche.py
analysis/_method_tranche/: __init__.py  dependence.py  paired_trinomial.py
analysis/calibration/: __init__.py  e2_base_grid.py  e4_corpus.py
analysis/contract_v2/: __init__.py  report.py  verification.py
docs/preregistrations/: calibration-sap.md  e1-lane-a-aa-sap.md  (+2 more)
evidence/: data.json  false-positive-representative.md  live-smoke-no-go.md  sample-lab-report.json  schema-v2.0.0-draft.1.json  schema.json
figures/: generate.py
reports/: contract-v2-not-evaluable.qmd  experimental-inference-note.qmd  methodology-report.qmd
scripts/: publication_safety.py  render_methodology_report.py  run-merge-gate.sh
tests/: test_calibration_freeze.py  test_calibration_saps.py  test_contract_v2.py  test_contract_v2_delivery_manifest.py  test_contract_v2_wheel_containment.py  test_dependence.py  test_enhanced_estimators.py  test_experimental_module_containment.py  test_experimental_note_publication.py  test_identity_domain.py  test_method_tranche_results.py  test_paired_trinomial.py  test_primitives.py  test_report_render_layer.py  test_schema_and_version.py
(+12 files in other folders)
